RESOLVED FIXED114741
[BlackBerry] ASSERT in FrameLoaderClient::convertMainResourceLoadToDownload
https://bugs.webkit.org/show_bug.cgi?id=114741
Summary [BlackBerry] ASSERT in FrameLoaderClient::convertMainResourceLoadToDownload
Xan Lopez
Reported 2013-04-17 07:18:16 PDT
The test fast/dom/HTMLAnchorElement/anchor-nodownload-set.html tries to trigger a download for a Blob object. Our download code assumes all ResourceHandles have an associated FilterStream object (set on the ::start method for ResourceHandle), but Blob objects have their own ResourceHandle class which does not this (since they are not really retrieved from the network). This makes us crash when we ASSERT the stream object, since it will be null. As a workaround, call the right methods in our networking layer from FrameLoaderClient itself. Note that this does not yet fix this test, since there's at least another bug involved.
Attachments
no-stream.diff (3.80 KB, patch)
2013-04-17 07:21 PDT, Xan Lopez
no flags
no-stream.diff (3.71 KB, patch)
2013-04-17 07:29 PDT, Xan Lopez
no flags
Xan Lopez
Comment 1 2013-04-17 07:21:25 PDT
Created attachment 198507 [details] no-stream.diff
Xan Lopez
Comment 2 2013-04-17 07:29:58 PDT
Created attachment 198508 [details] no-stream.diff Applies properly against trunk.
Joe Mason
Comment 3 2013-04-17 07:53:59 PDT
Comment on attachment 198508 [details] no-stream.diff View in context: https://bugs.webkit.org/attachment.cgi?id=198508&action=review > Source/WebKit/blackberry/ChangeLog:7 > + You can add "Internally reviewed by Joe Mason" to this changelog message. (Plus you should add the PR number if we have an internal PR for it.)
Xan Lopez
Comment 4 2013-04-22 04:40:13 PDT
Ping about this? As Joe says, it's been already reviewed by him internally.
WebKit Commit Bot
Comment 5 2013-04-22 07:23:44 PDT
Comment on attachment 198508 [details] no-stream.diff Clearing flags on attachment: 198508 Committed r148880: <http://trac.webkit.org/changeset/148880>
WebKit Commit Bot
Comment 6 2013-04-22 07:23:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.