[BlackBerry] ASSERT in FrameLoaderClient::convertMainResourceLoadToDownload https://bugs.webkit.org/show_bug.cgi?id=114741

Patch by Xan Lopez <xlopez@igalia.com> on 2013-04-22
Reviewed by George Staikos.

Consider the case where a ResourceHandle won't have a FilterStream
object associated (for example, Blob objects) instead of ASSERTing
pointlessly when asking our network layer for such an object.

This partially fixes fast/dom/HTMLAnchorElement/anchor-nodownload-set.html

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::convertMainResourceLoadToDownload):

Canonical link: https://commits.webkit.org/133381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148880 268f45cc-cd09-0410-ab3c-d52691b4dbfc